--- a/src/templates/contacts.html
+++ b/src/templates/contacts.html
@@ -5,6 +5,7 @@
     <a href="{{ url_for("contacts")}}">home</a>
     <a href="{{ url_for("login")}}">login</a>
     <a href="{{ url_for("register")}}">register</a>
+    <a href="{{ url_for('logout' ) }}"></a>
 </header>
 {% endblock %}
 {% block body %}
