--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -6,11 +6,11 @@
         <form action="/login" method="POST">
             <div>
                 {{ form.email.label }}
-                {{ form.email }}
+                {{ form.email(placeholder="email") }}
             </div>
             <div>
                 {{ form.password.label }}
-                {{ form.password }}
+                {{ form.password(placeholder="password") }}
             </div>
             <div>
                 {{ form.enviar }}
