--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -4,7 +4,7 @@
     <div>
         <div>
             <h1>Bienvenido al pagina</h1>
-            <a href="{{ url_for("login")}}">Empezemos</a>
+            <a href="{{ url_for("login")}}">Agregar</a>
         </div>
     </div>
 {% endblock %}
