--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -14,7 +14,7 @@
             </div>
             <div>
                 {{ form.email.label }}
-                {{ form.email((placeholder="email")) }}
+                {{ form.email(placeholder="email") }}
             </div>
             <div>
                 {{ form.enviar }}
